2006-04-10  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gnome-screensaver and
	nautilus-cd-burner have been branched for gnome-2-14.

2006-04-08  Funda Wang <menthos@menthos.com>

	* translation-status.xml: evolution* should be 2.6 series in
        gnome-2.16.

2006-04-07  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Tried to add a gnome-2.16 release
	section.

2006-04-06  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gnome-nettool and gnopernicus have
	been branched for gnome-2-14.

2006-03-31  Danilo Šegan  <danilo@gnome.org>

	* translation-status.xml: Added <download/> tags to gimp stuff.
	gnome-themes, pessulus, vte branched.

2006-03-28  Danilo Šegan  <danilo@gnome.org>

	* translation-status.xml: gnome-desktop branched.

2006-03-24  Danilo Šegan  <danilo@gnome.org>

	* translation-status.xml: gedit, glib branched.

2006-03-20  Gabor Kelemen  <kelemeng@gnome.hu>

	* translation-status.xml: Corrected potname for gnome-spell and epiphany-extensions

2006-03-18  Danilo Šegan  <danilo@gnome.org>

	* translation-status.xml: gnome-terminal branched.

2006-03-18  Danilo Šegan  <danilo@gnome.org>

	* translation-status.xml: gcalctool branched.

2006-03-14  Danilo Šegan  <danilo@gnome.org>

	* translation-status.xml: gnome-games branched.

2006-03-14  Danilo Šegan  <danilo@gnome.org>

	* translation-status.xml: fast-user-switch-applet, metacity branched.

2006-03-14  Danilo Šegan  <danilo@gnome.org>

	* translation-status.xml: evince branched.

2006-03-13  Danilo Šegan  <danilo@gnome.org>

	* translation-status.xml: eog, zenity branched.

2006-03-13  Danilo Šegan  <danilo@gnome.org>

	* translation-status.xml: epiphany, epiphany-extensions,
	deskbar-applet, yelp, gucharmap branched with gnome-2-14.

2006-03-11  Danilo Šegan  <danilo@gnome.org>

	* translation-status.xml: libbonobo branched.

2006-03-09  Danilo Šegan  <danilo@gnome.org>

	* translation-status.xml: branch evolution, evolution-data-server, 