@@ -1046,7 +1046,7 @@
       <component name="gnome-applets" dir="gnome-applets" group="desktop">
         <podir dir="po"/>
         <potname name="gnome-applets-2.0.pot"/>
-        <branch name="HEAD"/>
+        <branch name="gnome-2-14"/>
         <regenerate/>
         <download/>
       </component>
@@ -1142,7 +1142,7 @@
       <component name="gnome-control-center" dir="gnome-control-center" group="desktop">
         <podir dir="po"/>
         <potname name="control-center-2.0.pot"/>
-        <branch name="HEAD"/>
+        <branch name="gnome-2-14"/>
         <regenerate/>
         <download/>
       </component>
@@ -2960,7 +2960,7 @@
       <component name="sound-juicer" dir="sound-juicer" group="desktop">
         <podir dir="po"/>
         <potname name="sound-juicer.pot"/>
-        <branch name="HEAD"/>
+        <branch name="gnome-2-14"/>
         <regenerate/>
         <download/>
       </component>
