@@ -1,3 +1,9 @@
+2006-04-14  Christian Rose  <menthos@menthos.com>
+
+	* translation-status.xml: gnome-control-center,
+	gnome-applets, and sound-juicer have all been branched for
+	gnome-2-14.
+
 2006-04-10  Christian Rose  <menthos@menthos.com>
 
 	* translation-status.xml: gnome-screensaver and
